[gd_scene load_steps=3 format=3 uid="uid://6msliswhcegf"]

[ext_resource type="Script" uid="uid://cfsglxs3kh3mx" path="res://Scripts/RecipeBook.gd" id="1_rb"]
[ext_resource type="Texture2D" uid="uid://dprrmfyt4mcq6" path="res://Assets/Art/recipe_book.png" id="2_a0oe7"]

[node name="RecipeBook" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_rb")

[node name="BookTexture" type="TextureRect" parent="."]
offset_left = 57.0
offset_top = 117.0
offset_right = 1647.8094
offset_bottom = 1013.0
texture = ExtResource("2_a0oe7")
expand_mode = 1

[node name="BookButton" type="TextureButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1666.0
offset_top = 527.0
offset_right = -1625.2
offset_bottom = 565.8
grow_horizontal = 0
scale = Vector2(5, 5)
ignore_texture_size = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 80.0
offset_right = -200.0
offset_bottom = -80.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 15.0
offset_right = 100.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Recipe Book"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
